# InternationalPhoneNumberParserRust

./: Cargo.toml  README.md  commands.txt
src/: errors.rs  grammar.pest  lib.rs  main.rs  numbers.txt  valid_numbers.txt
tests/: tests.rs
